manifests/watchtower/pairdrop/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pairdrop
  namespace: sync
  labels:
    app.kubernetes.io/name: pairdrop
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pairdrop
  ports:
    - name: http
      port: 3000
      targetPort: http
